# SynthSeg

./: README.md  pyproject.toml
src/SynthSeg/: cli.py  labels_to_image_model.py  predict_synthseg.py  training.py  training_qc.py  validate.py  validate_qc.py
src/ext/lab2im/: edit_tensors.py  edit_volumes.py  layers.py  utils.py
src/ext/neuron/: layers.py
